[007-(0.0.7)] Buttons Added >> Added in the basic buttons and CSS grid for them to make sure the spacing adjusts accordingly on various display sizes.

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -9,6 +9,7 @@
 
 html{
   height: 100%;
+  font-size: 10px;
 }
 
 .global-grid {
@@ -17,16 +18,16 @@ html{
   grid-gap: 10px;
   height: 100vh;
   margin-top: 0;
-  margin-bottom: 10%;
+  margin-bottom: 0;
 
   grid-template-columns: minmax(0, 1fr);
-  grid-template-rows: .1fr .4fr .1fr .1fr .3fr;
+  grid-template-rows: .1fr .5fr .1fr .1fr .4fr;
   grid-template-areas:
   "navbar"
   "consoleContainer"
   "aboutContainer"
   "playerChoices"
-  "controlPanel";
+  "controlContainer";
 }
 
 .navbar{
@@ -57,8 +58,8 @@ html{
   padding: auto;
 }
 
-.controlPanel{
-  grid-area: controlPanel;
+.controlContainerSection{
+  grid-area: controlContainer;
   background-color: grey;
   padding: auto;
 }
@@ -78,7 +79,7 @@ html{
     "navbar navbar"
     "consoleContainer aboutContainer"
     "consoleContainer playerChoices"
-    "controlPanel controlPanel";
+    "controlContainer controlContainer";
   }
 }
 
@@ -113,7 +114,7 @@ html{
     "navbar navbar"
     "consoleContainer aboutContainer"
     "consoleContainer playerChoices"
-    "controlPanel controlPanel";
+    "controlContainer controlContainer";
   }
 }
 
@@ -133,6 +134,6 @@ html{
     "navbar navbar"
     "consoleContainer aboutContainer"
     "consoleContainer playerChoices"
-    "controlPanel controlPanel";
+    "controlContainer controlContainer";
   }
 }
